# rayplay

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Daily_Prompts_Slash_Commands_Reference.md  EncodingConcepts.md  LICENSE  Makefile.toml  README.md  RayPlayNetworking.md  SECURITY.md
.cargo/: config.toml
.claude/: README.md  settings.json
.claude/agents/: developer.md  devops.md  product-manager.md  project-manager.md  qa-tester.md  senior-developer.md
.claude/commands/: coverage.md  eod.md  gates.md  implement-gh-issue  implement-gh-issue.md  implement-uc.md  implement.md  pr-review.md  qa.md  review.md  ship.md  status.md  uc-create.md
.claude/skills/code-review/: SKILL.md
.claude/skills/coverage/: SKILL.md
.claude/skills/eod/: SKILL.md
.claude/skills/gates/: SKILL.md
.claude/skills/implement-issue/: SKILL.md
.claude/skills/implement-uc/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/ship/: SKILL.md  pr-template.md
.claude/skills/status/: SKILL.md
.claude/skills/uc-create/: SKILL.md  uc-template.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/rayplay-cli/: Cargo.toml
crates/rayplay-cli/benches/: e2e_latency.rs
crates/rayplay-cli/src/: client.rs  client_main.rs  host.rs  host_capture_macos.rs  host_pairing_glue.rs  main.rs
crates/rayplay-cli/src/client/: config.rs  connect.rs  decode_dispatch.rs  receive.rs  test_helper.rs  tests.rs
crates/rayplay-cli/src/client/config/: tests.rs
crates/rayplay-cli/src/client/connect/: tests.rs
crates/rayplay-cli/src/client/decode_dispatch/: tests.rs
crates/rayplay-cli/src/host/: tests.rs
crates/rayplay-cli/tests/: e2e_codec_negotiation.rs  e2e_helpers.rs  e2e_mac_host_mac_client.rs  e2e_software_fallback.rs  e2e_win_host_mac_client.rs  e2e_win_nvenc.rs
crates/rayplay-core/: Cargo.toml
crates/rayplay-core/src/: frame.rs  lib.rs  lib_tests.rs  packet.rs  pairing.rs  session.rs
crates/rayplay-core/src/frame/: tests.rs
crates/rayplay-core/src/packet/: tests.rs
crates/rayplay-core/src/pairing/: tests.rs
crates/rayplay-core/src/session/: tests.rs
crates/rayplay-input/: Cargo.toml
crates/rayplay-network/: Cargo.toml
crates/rayplay-network/benches/: transport.rs
crates/rayplay-network/src/: client_key_store.rs  control.rs  fragmenter.rs  handshake.rs  keepalive.rs  lib.rs  pairing.rs  platform_dirs.rs  reassembler.rs  server_cert_store.rs  transport.rs  transport_tls.rs  trust_store.rs  wire.rs
crates/rayplay-network/src/control/: tests.rs
crates/rayplay-network/src/fragmenter/: tests.rs
crates/rayplay-network/src/handshake/: tests.rs
crates/rayplay-network/src/keepalive/: tests.rs
crates/rayplay-network/src/pairing/: tests.rs
crates/rayplay-network/src/reassembler/: tests.rs
crates/rayplay-network/src/transport/: tests.rs
crates/rayplay-network/src/wire/: tests.rs
crates/rayplay-ui/: Cargo.toml
crates/rayplay-ui/src/: app.rs  events.rs  host.rs  lib.rs  screens.rs
crates/rayplay-ui/src/screens/: add_host.rs  connecting.rs  host_list.rs  pairing.rs  settings.rs  streaming.rs
crates/rayplay-video/: Cargo.toml  build.rs
crates/rayplay-video/benches/: decoding.rs  encoding.rs  rendering.rs
crates/rayplay-video/nvenc/: wrapper.h
crates/rayplay-video/src/: capture.rs  capture_factory.rs  chunker.rs  d3d11_device.rs  decoded_frame.rs  decoder.rs  dxgi_capture.rs  encoder.rs  ffmpeg_dec.rs  ffmpeg_enc.rs  frame.rs  frame_notifier.rs  lib.rs  nvenc.rs  nvenc_sys.rs  openh264_dec.rs  openh264_enc.rs  packet.rs  pipeline_mode.rs  render_window.rs  renderer.rs  sck_capture.rs  scrap_capture.rs  screen_permission_macos.rs  videotoolbox.rs  wgpu_iosurface.rs  wgpu_renderer.rs  wgpu_surface.rs
crates/rayplay-video/src/capture/: tests.rs
crates/rayplay-video/src/chunker/: tests.rs
crates/rayplay-video/src/decoded_frame/: tests.rs
crates/rayplay-video/src/decoder/: tests.rs
crates/rayplay-video/src/encoder/: tests.rs
crates/rayplay-video/src/nvenc_sys/ffi/: tests.rs
crates/rayplay-video/src/openh264_dec/: tests.rs
crates/rayplay-video/src/openh264_enc/: tests.rs
crates/rayplay-video/src/pipeline_mode/: tests.rs
crates/rayplay-video/src/renderer/: tests.rs
crates/rayplay-video/src/videotoolbox/macos/: tests.rs
crates/rayplay-video/src/wgpu_renderer/: tests.rs
crates/rayplay-video/tests/: nvenc_hw_e2e.rs
docs/adr/: ADR-000.md  ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md
docs/requirements/: product-roadmap.md
docs/uc/: UC-001.md  UC-002.md  UC-003.md  UC-004.md  UC-005.md  UC-006.md  UC-007.md  UC-008.md  UC-009.md  UC-010.md  UC-011.md  UC-012.md  UC-013.md  UC-014.md  UC-015.md  UC-016.md  UC-017.md  UC-018.md  UC-019.md  UC-020.md  UC-021.md  UC-022.md  UC-023.md  UC-024.md  UC-025.md  UC-026.md
docs/wireframes/: rayview-ui.html
