[workspace]
members = ["crates/*"]
resolver = "3"


# Shared dependency versions — crates inherit from here
[workspace.dependencies]
anyhow      = "1"
thiserror   = "2"
tokio       = { version = "1", features = ["full"] }
axum        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion   = { version = "0.8", features = ["html_reports"] }
clap        = { version = "4", features = ["derive"] }
winit             = "0.30"
wgpu              = "22"
crossbeam-channel = "0.5"
pollster          = "0.3"
tokio-util        = { version = "0.7", features = ["rt"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true

[profile.ci]
inherits = "dev"
opt-level = 1       # Slightly faster CI builds without full debug overhead
