[package]
name = "rayplay-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rayhost"
path = "src/main.rs"

[[bin]]
name = "rayview"
path = "src/client_main.rs"

[dependencies]
anyhow.workspace             = true
clap                         = { workspace = true, features = ["derive"] }
crossbeam-channel.workspace  = true
rustls                       = { version = "0.23", default-features = false, features = ["ring"] }
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
rayplay-network              = { path = "../rayplay-network" }
rayplay-video                = { path = "../rayplay-video" }

[dev-dependencies]
criterion.workspace = true
tempfile            = "3"
