[package]
name = "rayplay-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rayhost"
path = "src/main.rs"

[[bin]]
name = "rayview"
path = "src/client_main.rs"

[dependencies]
anyhow.workspace             = true
clap                         = { workspace = true, features = ["derive"] }
crossbeam-channel.workspace  = true
tokio.workspace              = true
tokio-util.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
rayplay-core                 = { path = "../rayplay-core" }
rayplay-network              = { path = "../rayplay-network" }
rayplay-video                = { path = "../rayplay-video" }

[[bench]]
name    = "e2e_latency"
harness = false

[dev-dependencies]
criterion.workspace = true
tempfile            = "3"
