[package]
name = "rayplay-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI entry points (rayhost and rayview) for the RayPlay game streaming system"

[[bin]]
name = "rayhost"
path = "src/main.rs"

[[bin]]
name = "rayview"
path = "src/client_main.rs"

[dependencies]
anyhow.workspace             = true
clap                         = { workspace = true, features = ["derive"] }
crossbeam-channel.workspace  = true
tokio.workspace              = true
tokio-util.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
rayplay-core                 = { path = "../rayplay-core" }
rayplay-network              = { path = "../rayplay-network" }
rayplay-video                = { path = "../rayplay-video" }

[features]
## Forward hw-codec-tests to rayplay-video for integration tests that need
## hardware encoders/decoders (VtDecoder on macOS, NvencEncoder on Windows).
hw-codec-tests = ["rayplay-video/hw-codec-tests"]

[[bench]]
name    = "e2e_latency"
harness = false

[dev-dependencies]
criterion.workspace = true
tempfile            = "3"
anyhow.workspace    = true
wgpu.workspace      = true
pollster.workspace  = true
