[package]
name = "rayplay-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace      = true
tokio.workspace          = true
tracing.workspace        = true
serde.workspace          = true
serde_json.workspace     = true
ed25519-dalek.workspace  = true
base64.workspace         = true
rand.workspace           = true
rand_core.workspace      = true
chrono.workspace         = true

[dev-dependencies]
criterion.workspace   = true