[package]
name = "rayplay-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core streaming types, session config, and error traits for RayPlay"

[dependencies]
thiserror.workspace      = true
tokio.workspace          = true
tracing.workspace        = true
serde.workspace          = true
serde_json.workspace     = true
ed25519-dalek.workspace  = true
base64.workspace         = true
rand.workspace           = true
rand_core.workspace      = true
chrono.workspace         = true

[dev-dependencies]
criterion.workspace   = true