[package]
name = "rayplay-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Input capture, relay, and exclusive mode for RayPlay"

[dependencies]
thiserror.workspace = true
tokio.workspace     = true
tracing.workspace   = true
serde.workspace     = true

[dev-dependencies]
criterion.workspace = true

