[package]
name = "rayplay-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Networking layer for RayPlay: QUIC/UDP transport, framing, and mDNS discovery"

[dependencies]
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
rayplay-core          = { path = "../rayplay-core" }
quinn               = { version = "0.11", default-features = true }
rustls              = { version = "0.23", default-features = false, features = ["ring"] }
rcgen               = "0.13"
bytes               = "1"
tokio-util.workspace  = true
spake2.workspace      = true
ed25519-dalek.workspace = true
base64.workspace      = true
rand.workspace        = true
rand_core.workspace   = true
chrono.workspace      = true
hmac.workspace        = true
sha2.workspace        = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name    = "transport"
harness = false