[package]
name = "rayplay-video"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace         = true
tokio.workspace             = true
tracing.workspace           = true
serde.workspace             = true
winit.workspace             = true
wgpu.workspace              = true
crossbeam-channel.workspace = true
pollster.workspace          = true
rayplay-core                = { path = "../rayplay-core" }

# Optional fallback dependencies
scrap = { version = "0.5", optional = true }
openh264 = { version = "0.6", optional = true }
ffmpeg-next = { version = "6.1", optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true }
objc  = { workspace = true }
screencapturekit = "1"

[features]
default = ["fallback"]

## Enable hardware-accelerated codec tests (VtDecoder on Apple Silicon, NvencEncoder on Windows).
## Requires appropriate hardware. Only enabled on self-hosted CI runners.
hw-codec-tests = []

## Enable rendering tests that require a GPU and a window handle.
## On standard CI (GitHub Actions macOS), the event loop cannot be driven headlessly.
hw-render-tests = []

## Enable fallback software implementations using scrap and openh264.
## Default-enabled for broader platform compatibility.
fallback = ["dep:scrap", "dep:openh264"]

## Enable FFmpeg-based fallback implementations for advanced codec support.
## Opt-in due to FFmpeg's complex build requirements.
ffmpeg-fallback = ["dep:ffmpeg-next", "dep:libc"]

# The `objc` crate's `msg_send!` macro checks `cfg(feature = "cargo-clippy")`,
# which is not a known feature of this crate. Tell check-cfg to expect it.
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("cargo-clippy"))']

[dev-dependencies]
criterion.workspace  = true
serde_json.workspace = true

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "decoding"
harness = false

[[bench]]
name = "rendering"
harness = false